--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,7 @@ dependencies {
     implementation 'com.google.zxing:core:3.2.0'
     implementation("com.squareup.okhttp3:okhttp:4.2.2")
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
 }
